--- a/src/components/Dashboard/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile.scss
@@ -24,7 +24,7 @@
 }
 
 .chata-dashboard-tile-inner-div {
-  height: 100%;
+  height: calc(100% - 55px);
   width: 100%;
   background: inherit;
   position: relative;
