initial UI design for notifications list

--- a/src/components/Notifications/NotificationButton.scss
+++ b/src/components/Notifications/NotificationButton.scss
@@ -1,5 +1,6 @@
 .chata-notifications-button-container {
   position: relative;
+  // margin-right: 10px;
 
   .chata-notifications-button {
     // font-size: inherit;
