--- a/src/components/ResponseRenderer/ResponseRenderer.scss
+++ b/src/components/ResponseRenderer/ResponseRenderer.scss
@@ -125,6 +125,8 @@
 .chata-chart-tooltip {
   font-family: var(--chata-drawer-font-family), sans-serif;
   letter-spacing: 0.04em;
+  line-height: 22px;
+  font-size: 13px;
   padding: 7px 15px;
   transition: all 0.2s ease;
   text-align: left;
