--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -3,9 +3,17 @@
 }
 
 .m-checkbox {
+  --accent-color: #26a7df;
+
   display: flex;
   align-items: center;
   padding: 0.5rem;
+  // height: 100%;
+
+  .m-checkbox--switch__input:checked {
+    border-color: var(--accent-color);
+    background: var(--accent-color);
+  }
 }
 .m-checkbox__label {
   flex-shrink: 0;
@@ -25,7 +33,7 @@
 
   background: transparent;
   cursor: pointer;
-  border: 1px solid #5dceee;
+  // border: 1px solid transparent;
   border-radius: 3px;
 }
 .m-checkbox__input::before {
@@ -36,7 +44,8 @@
   bottom: 50%;
   left: 50%;
   transition: all 0.1s;
-  background: #5dceee;
+  background: #fff;
+  box-shadow: 0 0 2px 1px #00000030;
 }
 .m-checkbox__input:checked::before,
 .m-checkbox__input:indeterminate::before {
@@ -74,8 +83,10 @@
 .m-checkbox--switch__input {
   width: 36px;
   height: 20px;
-  border: 2px solid #5a5358;
+  // border: 2px solid #5a5358;
   border-radius: 16px;
+  background: #cccccc;
+  border: 1px solid #cccccc;
 }
 .m-checkbox--switch__input::before {
   top: 2px;
@@ -83,10 +94,7 @@
   bottom: 2px;
   left: 2px;
   border-radius: 50%;
-  background: #5a5358;
-}
-.m-checkbox--switch__input:checked {
-  border-color: #5dceee;
+  background: #fff;
 }
 .m-checkbox--switch__input:checked + .m-checkbox--switch__label::after {
   content: "on";
@@ -94,5 +102,4 @@
 .m-checkbox--switch__input:checked::before {
   right: 2px;
   left: 18px;
-  background: #5dceee;
 }
