initial UI rough-in for notification settings

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -14,7 +14,7 @@
 
 .chata-btn.default {
   color: inherit;
-  border: 1px solid #a7a7a7;
+  border: 1px solid #00000026;
   background: inherit;
 }
 .chata-btn.default:hover {
