--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -7,8 +7,9 @@
 
   display: flex;
   align-items: center;
-  padding: 0.5rem;
+  margin: 0.5rem;
   // height: 100%;
+  cursor: pointer;
 
   .chata-checkbox--switch__input:checked {
     border-color: var(--accent-color);
