--- a/src/components/ChatBar/ChatBar.scss
+++ b/src/components/ChatBar/ChatBar.scss
@@ -4,7 +4,7 @@
   flex-direction: row;
 }
 
-.chata-input {
+.chata-chatbar-input {
   padding: 10px;
   padding-left: 20px;
   margin: 10px;
@@ -23,23 +23,23 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   color: #5d5d5d;
 }
-.chata-input.left-padding {
+.chata-chatbar-input.left-padding {
   padding-left: 54px;
 }
-.chata-input:disabled {
+.chata-chatbar-input:disabled {
   background: rgba(0, 0, 0, 0.03);
 }
-.chata-input:not(:disabled):hover {
+.chata-chatbar-input:not(:disabled):hover {
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 }
-.chata-input::placeholder {
+.chata-chatbar-input::placeholder {
   /* Default color outside of chat drawer */
   color: #999 !important;
 }
 
 /* autosuggest */
 .react-autosuggest__container,
-.chata-input-container {
+.chata-chatbar-input-container {
   position: relative;
   flex: 1;
 }
