--- a/src/components/Notifications/NotificationList/NotificationList.scss
+++ b/src/components/Notifications/NotificationList/NotificationList.scss
@@ -48,6 +48,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 50px;
 
     padding-left: 25px;
     padding-right: 10px;
