add chat bar to test page

--- a/src/components/ResponseRenderer/ResponseRenderer.scss
+++ b/src/components/ResponseRenderer/ResponseRenderer.scss
@@ -7,6 +7,8 @@
   font-size: 14px;
   height: 100%;
   width: 100%;
+  max-height: 100vh !important; // this safetynet forces progressive rendering
+  overflow: hidden;
 }
 
 .chata-suggestions-container {
