--- a/src/components/Notifications/NotificationList/NotificationList.scss
+++ b/src/components/Notifications/NotificationList/NotificationList.scss
@@ -12,9 +12,9 @@
     background: #fff;
     border-radius: 4px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
-    height: 50px;
+    height: 70px;
 
-    margin-bottom: 12px;
+    margin-bottom: 8px;
 
     color: rgba(0, 0, 0, 0.6);
     // font-weight: 500;
@@ -38,9 +38,9 @@
       .chata-notification-alert-strip {
         height: 300px;
       }
-      .chata-notification-list-item-header {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-      }
+      // .chata-notification-list-item-header {
+      //   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+      // }
     }
   }
 
@@ -48,19 +48,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 50px;
+    height: 70px;
 
-    padding-left: 25px;
-    padding-right: 10px;
+    padding-left: 22px;
+    padding-right: 4px;
 
     cursor: pointer;
   }
 
   .chata-notification-data-container {
     width: 100%;
-    height: 205px;
-    padding: 0 20px;
-    padding-top: 5px;
+    height: 230px;
+    padding: 7px 20px;
   }
 
   .chata-notification-data-title {
@@ -136,7 +135,7 @@
   .chata-notification-alert-strip {
     opacity: 0;
     position: absolute;
-    height: 50px;
+    height: 70px;
     left: 0px;
     top: 0;
     width: 4px;
@@ -149,27 +148,28 @@
     transition-timing-function: ease, cubic-bezier(0.26, 0.26, 0, 1);
   }
 
-  .chata-notification-enable-checkbox {
-    margin-top: 14px;
+  .chata-notification-display-name-container {
+    line-height: 23px;
+    padding-top: 13px;
+    transition: color 0.2s ease;
+
+    .chata-notification-display-name {
+      font-size: 16px;
+    }
+    .chata-notification-timestamp {
+      font-size: 12px;
+      opacity: 0.5;
+
+      svg {
+        margin-bottom: -1px;
+      }
+    }
   }
 
   .chata-notification-list-item.triggered {
-    .chata-notification-list-item-header {
+    .chata-notification-display-name,
+    .chata-notification-dismiss-btn {
       color: var(--accent-color);
-      // color: #f5222d;
-    }
-
-    .chata-notification-display-name {
-      // font-weight: 500;
-      transition: color 0.2s ease;
-    }
-
-    .chata-notification-click-to-dismiss {
-      color: white;
-      text-align: center;
-      position: absolute;
-      top: 10px;
-      left: 50%;
     }
 
     .chata-notification-alert-strip {
