--- a/src/components/Notifications/NotificationSettings/NotificationSettings.scss
+++ b/src/components/Notifications/NotificationSettings/NotificationSettings.scss
@@ -23,32 +23,31 @@
       height: 300px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
-
-    // &:last-of-type {
-    //   .chata-notification-setting-item-header {
-    //     border:
-    //   }
-    // }
   }
 
   .chata-notification-setting-item-header {
     display: flex;
     justify-content: space-between;
     height: 56px;
-    padding-left: 20px;
+    padding-left: 25px;
     padding-right: 8px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
+  .chata-notification-enable-checkbox {
+    margin-top: 18px;
+  }
+
   .chata-notification-edit-icon {
+    margin-top: 9px;
+    margin-right: 3px;
     font-size: 18px;
     height: 50px;
     width: 36px;
     height: 36px;
     padding: 9px;
     border-radius: 20px;
-    margin-top: 9px;
-    margin-right: 3px;
+
     background-color: transparent;
     transition: background-color 0.2s ease;
     cursor: pointer;
@@ -57,6 +56,9 @@
       background-color: #ececec;
     }
   }
+
+  // .chata-notification-setting-actions {
+  // }
 }
 
 .chata-notification-add-btn-container {
