--- a/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
+++ b/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
@@ -3,7 +3,7 @@
   border-style: dashed !important;
   height: 38px;
   line-height: 25px;
-  margin-right: 0 !important;
+  margin: 0 !important;
   margin-top: 15px !important;
   overflow: hidden;
 }
