--- a/src/components/ChatDrawer/ChatDrawer.scss
+++ b/src/components/ChatDrawer/ChatDrawer.scss
@@ -97,8 +97,8 @@
   font-size: 13px;
 }
 .chata-drawer .watermark svg {
-  width: 16px;
-  transform: translate(0, 7px);
+  // width: 16px;
+  // transform: translate(0, 7px);
 }
 
 .chata-drawer .chata-drawer:focus {
@@ -145,6 +145,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50px !important;
+  font-size: 22px;
 }
 .chata-drawer.drawer-right .drawer-handle {
   left: -60px;
@@ -342,7 +343,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
-  font-size: 18px;
+  font-size: 22px;
   text-align: center;
   transform: translate(0, 0);
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
@@ -362,7 +363,7 @@
   padding-left: 10px;
   height: 65px;
   width: 45px;
-  line-height: 52px;
+  line-height: 49px;
 }
 .page-switcher-container.left .tab {
   text-align: left;
