update notification logic modal

--- a/src/components/Notifications/GroupCopy/Group.scss
+++ b/src/components/Notifications/GroupCopy/Group.scss
@@ -5,7 +5,7 @@
   margin-bottom: 20px;
 
   &:first-of-type {
-    margin-top: 10px;
+    margin-top: 0;
   }
   &:last-of-type {
     margin-bottom: 0;
@@ -19,14 +19,15 @@
   }
 
   .notification-and-or-text {
-    width: 50px;
+    width: 41px;
     z-index: 999999;
     position: absolute;
-    left: -25px;
-    top: -7px;
-    padding: 5px;
-    border-radius: 25px;
+    left: -21px;
+    top: -5px;
+    padding: 4px;
+    border-radius: 4px;
     text-align: center;
+    font-size: 12px;
   }
 
   .chata-notification-group-container-copy {
