--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -8,10 +8,12 @@
     border-radius: 4px;
     background: white;
     line-height: 32px;
+    min-height: 34px;
     padding: 0 10px;
     width: 100%;
     outline: none !important;
     transition: all 0.2s ease;
+    transition-property: border-color, color, opacity;
 
     &.with-icon {
       padding-left: 38px;
