--- a/src/components/Notifications/NotificationSettings/NotificationSettings.scss
+++ b/src/components/Notifications/NotificationSettings/NotificationSettings.scss
@@ -73,11 +73,12 @@
     border-radius: 20px;
     background: #26a7df;
     color: white;
-    line-height: 40px;
+    line-height: 38px;
     text-align: center;
     font-size: 20px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
     transition: all 0.2s ease;
+    margin-right: 5px;
     cursor: pointer;
 
     &:hover {
