--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -8,7 +8,7 @@
 
   display: flex;
   align-items: center;
-  margin: 0.5rem;
+  // margin: 0.5rem;
   // height: 100%;
   cursor: pointer;
 
@@ -46,7 +46,7 @@
   bottom: 50%;
   left: 50%;
   transition: all 0.2s;
-  background: #fff;
+  background: var(--chata-drawer-accent-color);
 }
 
 .chata-checkbox--switch__input::before {
@@ -111,5 +111,6 @@
 }
 
 .chata-checkbox-label {
-  padding-left: 10px;
+  padding-left: 6px;
+  line-height: 100%;
 }
