--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -20,21 +20,27 @@
 .chata-select-popup-container {
   background: var(--chata-drawer-background-color);
   padding: 10px 0;
-}
-.chata-select-popup {
-  list-style-type: none;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-.chata-select-popup li {
-  color: var(--chata-drawer-text-color-primary);
-  width: 100%;
-  height: 35px;
-  line-height: 35px;
-  padding: 0 20px;
-  cursor: pointer;
-}
-.chata-select-popup li:hover {
-  background: rgba(0, 0, 0, 0.05);
+
+  .chata-select-option.active {
+    background: rgba(0, 0, 0, 0.04);
+  }
+  .chata-select-popup {
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
+    li {
+      color: var(--chata-drawer-text-color-primary);
+      width: 100%;
+      height: 35px;
+      line-height: 35px;
+      padding: 0 20px;
+      cursor: pointer;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.05);
+      }
+    }
+  }
 }
