fix toolbar text color in dashboards

--- a/src/components/VizToolbar/VizToolbar.scss
+++ b/src/components/VizToolbar/VizToolbar.scss
@@ -15,7 +15,7 @@
   font-size: 16px;
   line-height: 28px;
   vertical-align: top;
-  color: var(--chata-drawer-text-color-primary);
+  color: inherit;
   cursor: pointer;
   outline: none !important;
 }
