--- a/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
+++ b/src/components/Notifications/NotificationRulesCopy/NotificationRules.scss
@@ -1,4 +1,5 @@
-.notification-rule-add-btn-outer {
+.notification-rule-add-btn-outer,
+.notification-rule-validate-btn-outer {
   text-align: center;
   border-style: dashed !important;
   height: 38px;
@@ -24,4 +25,9 @@
   position: absolute;
   left: 0;
   top: 50%;
+}
+
+.notification-first-group-btn-container {
+  display: flex;
+  justify-content: space-between;
 }
