prepare notifications for backend

--- a/src/components/Notifications/NotificationItem/NotificationItem.scss
+++ b/src/components/Notifications/NotificationItem/NotificationItem.scss
@@ -20,6 +20,7 @@
   animation: slideIn 0.5s cubic-bezier(0.26, 0.26, 0, 1);
   animation-fill-mode: both;
   animation-delay: 0s;
+  // opacity: 0;
 
   cursor: pointer;
 
