--- a/src/components/ChatDrawer/ChatDrawer.scss
+++ b/src/components/ChatDrawer/ChatDrawer.scss
@@ -25,7 +25,7 @@
   width: 100%;
   height: 60px;
   background: var(--chata-drawer-accent-color);
-  box-shadow: 0 0 14px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.1);
   flex-grow: 0;
   flex-shrink: 0;
   z-index: 1;
@@ -96,7 +96,7 @@
   color: var(--chata-drawer-text-color-primary);
   text-align: center;
   opacity: 0.2;
-  top: 0;
+  top: 6px;
   width: calc(100% - 10px);
   font-size: 13px;
 }
