--- a/src/components/SpeechToTextButton/SpeechToTextButton.scss
+++ b/src/components/SpeechToTextButton/SpeechToTextButton.scss
@@ -33,7 +33,7 @@
   letter-spacing: 0.04em;
   padding: 7px 15px;
   opacity: 1 !important;
-  z-index: 99999;
+  z-index: 99999 !important;
 }
 
 @keyframes slide {
