--- a/src/components/Notifications/NotificationList/NotificationList.scss
+++ b/src/components/Notifications/NotificationList/NotificationList.scss
@@ -30,8 +30,8 @@
   width: 100%;
 }
 
-// Set delay per List Item, max out at 15 as it shouldnt exceed this
-@for $i from 0 through 100 {
+// Set delay per List Item
+@for $i from 0 through 10 {
   .chata-notification-list-item:nth-of-type(#{$i}) {
     animation-delay: 0.1s * $i;
   }
