auto-detect query or constant in rule creation

--- a/src/components/Notifications/Rule/Rule.scss
+++ b/src/components/Notifications/Rule/Rule.scss
@@ -47,7 +47,7 @@
       margin: 0;
     }
     .chata-input-container .chata-input {
-      padding-left: 48px;
+      // padding-left: 48px;
     }
     .chata-input-container:hover + .chata-rule-term-type-selector,
     .chata-input-container.focus + .chata-rule-term-type-selector {
