--- a/examples/cra/src/index.css
+++ b/examples/cra/src/index.css
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow: visible;
+}
+
 .test-page-container {
   padding: 20px;
   padding-right: 500px;
