add autocomplete to dashboards

--- a/src/components/ChatBar/ChatBar.scss
+++ b/src/components/ChatBar/ChatBar.scss
@@ -38,7 +38,7 @@
 }
 
 /* autosuggest */
-.react-autosuggest__container,
+.chata-bar-container .react-autosuggest__container,
 .chata-chatbar-input-container {
   position: relative;
   flex: 1;
