--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -159,7 +159,8 @@
   width: 100%;
   height: 100%;
 }
-.dashboard-tile-input-container .dashboard-tile-input {
+.dashboard-tile-input-container .dashboard-tile-input,
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input {
   width: 0;
   padding: 12px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -173,14 +174,22 @@
     padding-left: 40px;
   }
 }
-.dashboard-tile-input-container .dashboard-tile-input:focus {
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input {
+  width: 100%;
+  height: 100%;
+}
+.dashboard-tile-input-container .dashboard-tile-input:focus,
+.dashboard-tile-input-container.query-focused .react-autosuggest__container {
   width: 80%;
 }
 .dashboard-tile-input-container .dashboard-tile-input:hover,
-.dashboard-tile-input-container .dashboard-tile-input:focus {
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input:hover,
+.dashboard-tile-input-container .dashboard-tile-input:focus,
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input:focus {
   border: 1px solid rgb(38, 167, 233) !important;
 }
-.dashboard-tile-input-container .dashboard-tile-input.query {
+.dashboard-tile-input-container .dashboard-tile-input.query,
+.dashboard-tile-input-container .dashboard-tile-autocomplete-input {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
@@ -193,6 +202,66 @@
 .dashboard-tile-input-container .dashboard-tile-input.title:focus {
   /* This is done to balance it because we add a 1px left border when the input is focused or hovered */
   margin-left: -1px;
+}
+
+/* Autocomplete styles */
+.dashboard-tile-input-container .react-autosuggest__container {
+  position: relative;
+  width: 0;
+  padding: 0;
+  margin: 0;
+  flex-grow: 1;
+  transition: width 0.3s ease;
+}
+.dashboard-tile-input-container
+  .react-autosuggest__suggestions-container--open {
+  background-color: var(--chata-dashboard-background-color);
+  border: 1px solid var(--chata-dashboard-border-color);
+  color: var(--chata-dashboard-text-color-primary);
+}
+.dashboard-tile-input-container .react-autosuggest__suggestion {
+  color: var(--chata-dashboard-text-color-primary);
+}
+.dashboard-tile-input-container
+  .react-autosuggest__suggestions-container--open {
+  position: absolute;
+  bottom: unset;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  display: block;
+  height: unset;
+  border-radius: 24px;
+  font-family: inherit;
+  font-size: 15px;
+  font-weight: normal;
+  z-index: 2;
+  overflow: hidden;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
+  text-align: left;
+  width: 100%;
+  top: 35px;
+  border-radius: 4px;
+  margin: 0;
+}
+.dashboard-tile-input-container .react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.dashboard-tile-input-container .react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 2px;
+  padding-left: 18px;
+  letter-spacing: 0.05em;
+  line-height: 22.5px;
+}
+.dashboard-tile-input-container .react-autosuggest__suggestion--highlighted {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+.dashboard-tile-input-container .react-autosuggest__section-title {
+  padding: 10px 0 0 10px;
+  font-size: 12px;
+  color: #777;
 }
 
 /* Dragging placeholder styles */
