--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -197,6 +197,7 @@
   border-left: none;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  z-index: 2;
 }
 .dashboard-tile-input-container .dashboard-tile-input.title:hover,
 .dashboard-tile-input-container .dashboard-tile-input.title:focus {
