fix safetynet execute button for dashboard tiles

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -64,7 +64,7 @@
 }
 .dashboard-tile-response-wrapper.small .chata-safety-net-description,
 .dashboard-tile-response-wrapper.small .chata-suggestion-message-description,
-.dashboard-tile-response-wrapper .chata-safety-net-execute-btn {
+.dashboard-tile-response-wrapper.small .chata-safety-net-execute-btn {
   display: none;
 }
 
